rplugin/python3/tshunkyPy/backends/luaBackend/luaParser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INTEGER_DIVIDE

Grammar

Rule 0     S' -> block
Rule 1     block -> chunk
Rule 2     chunk -> chunk2 laststat
Rule 3     chunk -> chunk2
Rule 4     chunk -> laststat
Rule 5     chunk2 -> stat optsemi
Rule 6     chunk2 -> chunk stat optsemi
Rule 7     optsemi -> ;
Rule 8     optsemi -> empty
Rule 9     laststat -> RETURN explist optsemi
Rule 10    laststat -> RETURN optsemi
Rule 11    laststat -> BREAK optsemi
Rule 12    stat -> varlist = explist
Rule 13    stat -> LOCAL namelist = explist
Rule 14    stat -> LOCAL namelist
Rule 15    stat -> FUNCTION funcname funcbody
Rule 16    stat -> LOCAL FUNCTION name funcbody
Rule 17    stat -> functioncall
Rule 18    stat -> DO block END
Rule 19    stat -> WHILE exp DO block END
Rule 20    stat -> REPEAT block UNTIL exp
Rule 21    stat -> if elseiflist else END
Rule 22    stat -> FOR name = exp , exp DO block END
Rule 23    stat -> FOR name = exp , exp , exp DO block END
Rule 24    stat -> FOR namelist IN explist DO block END
Rule 25    if -> IF exp THEN block
Rule 26    elseiflist -> elseif
Rule 27    elseiflist -> elseiflist elseif
Rule 28    elseiflist -> empty
Rule 29    elseif -> ELSEIF exp THEN block
Rule 30    else -> ELSE block
Rule 31    else -> empty
Rule 32    var -> name
Rule 33    var -> prefixexp [ exp ]
Rule 34    var -> prefixexp . name
Rule 35    varlist -> var
Rule 36    varlist -> varlist , var
Rule 37    name -> IDENTIFIER
Rule 38    funcname -> funcname2
Rule 39    funcname -> funcname2 : name
Rule 40    funcname2 -> name
Rule 41    funcname2 -> funcname2 . name
Rule 42    namelist -> name
Rule 43    namelist -> namelist , name
Rule 44    exp -> NIL
Rule 45    exp -> FALSE
Rule 46    exp -> TRUE
Rule 47    exp -> NUMBER
Rule 48    exp -> string
Rule 49    exp -> TDOT
Rule 50    exp -> function
Rule 51    exp -> prefixexp
Rule 52    exp -> tableconstructor
Rule 53    exp -> op
Rule 54    explist -> exp
Rule 55    explist -> explist , exp
Rule 56    prefixexp -> var
Rule 57    prefixexp -> functioncall
Rule 58    prefixexp -> ( exp )
Rule 59    function -> FUNCTION funcbody
Rule 60    functioncall -> prefixexp args
Rule 61    functioncall -> prefixexp : name args
Rule 62    end -> END
Rule 63    funcbody -> ( parlist ) block END
Rule 64    funcbody -> ( ) block END
Rule 65    parlist -> namelist
Rule 66    parlist -> namelist , TDOT
Rule 67    parlist -> TDOT
Rule 68    args -> ( )
Rule 69    args -> ( explist )
Rule 70    args -> tableconstructor
Rule 71    args -> string
Rule 72    tableconstructor -> { fieldlist }
Rule 73    tableconstructor -> { }
Rule 74    field -> [ exp ] = exp
Rule 75    field -> name = exp
Rule 76    field -> exp
Rule 77    fieldlist -> fieldlist2 optfieldsep
Rule 78    fieldlist2 -> field
Rule 79    fieldlist2 -> fieldlist2 fieldsep field
Rule 80    optfieldsep -> fieldsep
Rule 81    optfieldsep -> empty
Rule 82    fieldsep -> ,
Rule 83    fieldsep -> ;
Rule 84    string -> STRING
Rule 85    op -> op_1
Rule 86    op_1 -> op_1 OR op_2
Rule 87    op_1 -> op_2
Rule 88    op_2 -> op_2 AND op_3
Rule 89    op_2 -> op_3
Rule 90    op_3 -> op_3 LT op_4
Rule 91    op_3 -> op_3 LTE op_4
Rule 92    op_3 -> op_3 GT op_4
Rule 93    op_3 -> op_3 GTE op_4
Rule 94    op_3 -> op_3 NE op_4
Rule 95    op_3 -> op_3 EQUALS op_4
Rule 96    op_3 -> op_4
Rule 97    op_4 -> op_4 CONCAT op_5
Rule 98    op_4 -> op_5
Rule 99    op_5 -> op_5 PLUS op_6
Rule 100   op_5 -> op_5 MINUS op_6
Rule 101   op_5 -> op_6
Rule 102   op_6 -> op_6 TIMES op_7
Rule 103   op_6 -> op_6 DIVIDE op_7
Rule 104   op_6 -> op_6 % op_7
Rule 105   op_6 -> op_7
Rule 106   op_7 -> NOT op_8
Rule 107   op_7 -> HASH op_8
Rule 108   op_7 -> MINUS op_8
Rule 109   op_7 -> op_8
Rule 110   op_8 -> op_8 CIRCUMFLEX op_9
Rule 111   op_8 -> op_9
Rule 112   op_9 -> exp
Rule 113   empty -> <empty>

Terminals, with rules where they appear

%                    : 104
(                    : 58 63 64 68 69
)                    : 58 63 64 68 69
,                    : 22 23 23 36 43 55 66 82
.                    : 34 41
:                    : 39 61
;                    : 7 83
=                    : 12 13 22 23 74 75
AND                  : 88
BREAK                : 11
CIRCUMFLEX           : 110
CONCAT               : 97
DIVIDE               : 103
DO                   : 18 19 22 23 24
ELSE                 : 30
ELSEIF               : 29
END                  : 18 19 21 22 23 24 62 63 64
EQUALS               : 95
FALSE                : 45
FOR                  : 22 23 24
FUNCTION             : 15 16 59
GT                   : 92
GTE                  : 93
HASH                 : 107
IDENTIFIER           : 37
IF                   : 25
IN                   : 24
INTEGER_DIVIDE       : 
LOCAL                : 13 14 16
LT                   : 90
LTE                  : 91
MINUS                : 100 108
NE                   : 94
NIL                  : 44
NOT                  : 106
NUMBER               : 47
OR                   : 86
PLUS                 : 99
REPEAT               : 20
RETURN               : 9 10
STRING               : 84
TDOT                 : 49 66 67
THEN                 : 25 29
TIMES                : 102
TRUE                 : 46
UNTIL                : 20
WHILE                : 19
[                    : 33 74
]                    : 33 74
error                : 
{                    : 72 73
}                    : 72 73

Nonterminals, with rules where they appear

args                 : 60 61
block                : 18 19 20 22 23 24 25 29 30 63 64 0
chunk                : 1 6
chunk2               : 2 3
else                 : 21
elseif               : 26 27
elseiflist           : 21 27
empty                : 8 28 31 81
end                  : 
exp                  : 19 20 22 22 23 23 23 25 29 33 54 55 58 74 74 75 76 112
explist              : 9 12 13 24 55 69
field                : 78 79
fieldlist            : 72
fieldlist2           : 77 79
fieldsep             : 79 80
funcbody             : 15 16 59
funcname             : 15
funcname2            : 38 39 41
function             : 50
functioncall         : 17 57
if                   : 21
laststat             : 2 4
name                 : 16 22 23 32 34 39 40 41 42 43 61 75
namelist             : 13 14 24 43 65 66
op                   : 53
op_1                 : 85 86
op_2                 : 86 87 88
op_3                 : 88 89 90 91 92 93 94 95
op_4                 : 90 91 92 93 94 95 96 97
op_5                 : 97 98 99 100
op_6                 : 99 100 101 102 103 104
op_7                 : 102 103 104 105
op_8                 : 106 107 108 109 110
op_9                 : 110 111
optfieldsep          : 77
optsemi              : 5 6 9 10 11
parlist              : 63
prefixexp            : 33 34 51 60 61
stat                 : 5 6
string               : 48 71
tableconstructor     : 52 70
var                  : 35 36 56
varlist              : 12 36

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . chunk
    (2) chunk -> . chunk2 laststat
    (3) chunk -> . chunk2
    (4) chunk -> . laststat
    (5) chunk2 -> . stat optsemi
    (6) chunk2 -> . chunk stat optsemi
    (9) laststat -> . RETURN explist optsemi
    (10) laststat -> . RETURN optsemi
    (11) laststat -> . BREAK optsemi
    (12) stat -> . varlist = explist
    (13) stat -> . LOCAL namelist = explist
    (14) stat -> . LOCAL namelist
    (15) stat -> . FUNCTION funcname funcbody
    (16) stat -> . LOCAL FUNCTION name funcbody
    (17) stat -> . functioncall
    (18) stat -> . DO block END
    (19) stat -> . WHILE exp DO block END
    (20) stat -> . REPEAT block UNTIL exp
    (21) stat -> . if elseiflist else END
    (22) stat -> . FOR name = exp , exp DO block END
    (23) stat -> . FOR name = exp , exp , exp DO block END
    (24) stat -> . FOR namelist IN explist DO block END
    (35) varlist -> . var
    (36) varlist -> . varlist , var
    (60) functioncall -> . prefixexp args
    (61) functioncall -> . prefixexp : name args
    (25) if -> . IF exp THEN block
    (32) var -> . name
    (33) var -> . prefixexp [ exp ]
    (34) var -> . prefixexp . name
    (56) prefixexp -> . var
    (57) prefixexp -> . functioncall
    (58) prefixexp -> . ( exp )
    (37) name -> . IDENTIFIER

    RETURN          shift and go to state 6
    BREAK           shift and go to state 7
    LOCAL           shift and go to state 9
    FUNCTION        shift and go to state 10
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    FOR             shift and go to state 17
    IF              shift and go to state 20
    (               shift and go to state 21
    IDENTIFIER      shift and go to state 22

    block                          shift and go to state 1
    chunk                          shift and go to state 2
    chunk2                         shift and go to state 3
    laststat                       shift and go to state 4
    stat                           shift and go to state 5
    varlist                        shift and go to state 8
    name                           shift and go to state 11
    functioncall                   shift and go to state 12
    if                             shift and go to state 16
    var                            shift and go to state 18
    prefixexp                      shift and go to state 19

state 1

    (0) S' -> block .



state 2

    (1) block -> chunk .
    (6) chunk2 -> chunk . stat optsemi
    (12) stat -> . varlist = explist
    (13) stat -> . LOCAL namelist = explist
    (14) stat -> . LOCAL namelist
    (15) stat -> . FUNCTION funcname funcbody
    (16) stat -> . LOCAL FUNCTION name funcbody
    (17) stat -> . functioncall
    (18) stat -> . DO block END
    (19) stat -> . WHILE exp DO block END
    (20) stat -> . REPEAT block UNTIL exp
    (21) stat -> . if elseiflist else END
    (22) stat -> . FOR name = exp , exp DO block END
    (23) stat -> . FOR name = exp , exp , exp DO block END
    (24) stat -> . FOR namelist IN explist DO block END
    (35) varlist -> . var
    (36) varlist -> . varlist , var
    (60) functioncall -> . prefixexp args
    (61) functioncall -> . prefixexp : name args
    (25) if -> . IF exp THEN block
    (32) var -> . name
    (33) var -> . prefixexp [ exp ]
    (34) var -> . prefixexp . name
    (56) prefixexp -> . var
    (57) prefixexp -> . functioncall
    (58) prefixexp -> . ( exp )
    (37) name -> . IDENTIFIER

    $end            reduce using rule 1 (block -> chunk .)
    END             reduce using rule 1 (block -> chunk .)
    UNTIL           reduce using rule 1 (block -> chunk .)
    ELSEIF          reduce using rule 1 (block -> chunk .)
    ELSE            reduce using rule 1 (block -> chunk .)
    LOCAL           shift and go to state 9
    FUNCTION        shift and go to state 10
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    FOR             shift and go to state 17
    IF              shift and go to state 20
    (               shift and go to state 21
    IDENTIFIER      shift and go to state 22

    stat                           shift and go to state 23
    varlist                        shift and go to state 8
    name                           shift and go to state 11
    functioncall                   shift and go to state 12
    if                             shift and go to state 16
    var                            shift and go to state 18
    prefixexp                      shift and go to state 19

state 3

    (2) chunk -> chunk2 . laststat
    (3) chunk -> chunk2 .
    (9) laststat -> . RETURN explist optsemi
    (10) laststat -> . RETURN optsemi
    (11) laststat -> . BREAK optsemi

    LOCAL           reduce using rule 3 (chunk -> chunk2 .)
    FUNCTION        reduce using rule 3 (chunk -> chunk2 .)
    DO              reduce using rule 3 (chunk -> chunk2 .)
    WHILE           reduce using rule 3 (chunk -> chunk2 .)
    REPEAT          reduce using rule 3 (chunk -> chunk2 .)
    FOR             reduce using rule 3 (chunk -> chunk2 .)
    IF              reduce using rule 3 (chunk -> chunk2 .)
    (               reduce using rule 3 (chunk -> chunk2 .)
    IDENTIFIER      reduce using rule 3 (chunk -> chunk2 .)
    $end            reduce using rule 3 (chunk -> chunk2 .)
    END             reduce using rule 3 (chunk -> chunk2 .)
    UNTIL           reduce using rule 3 (chunk -> chunk2 .)
    ELSEIF          reduce using rule 3 (chunk -> chunk2 .)
    ELSE            reduce using rule 3 (chunk -> chunk2 .)
    RETURN          shift and go to state 6
    BREAK           shift and go to state 7

    laststat                       shift and go to state 24

state 4

    (4) chunk -> laststat .

    LOCAL           reduce using rule 4 (chunk -> laststat .)
    FUNCTION        reduce using rule 4 (chunk -> laststat .)
    DO              reduce using rule 4 (chunk -> laststat .)
    WHILE           reduce using rule 4 (chunk -> laststat .)
    REPEAT          reduce using rule 4 (chunk -> laststat .)
    FOR             reduce using rule 4 (chunk -> laststat .)
    IF              reduce using rule 4 (chunk -> laststat .)
    (               reduce using rule 4 (chunk -> laststat .)
    IDENTIFIER      reduce using rule 4 (chunk -> laststat .)
    $end            reduce using rule 4 (chunk -> laststat .)
    END             reduce using rule 4 (chunk -> laststat .)
    UNTIL           reduce using rule 4 (chunk -> laststat .)
    ELSEIF          reduce using rule 4 (chunk -> laststat .)
    ELSE            reduce using rule 4 (chunk -> laststat .)


state 5

    (5) chunk2 -> stat . optsemi
    (7) optsemi -> . ;
    (8) optsemi -> . empty
    (113) empty -> .

    ;               shift and go to state 26
    RETURN          reduce using rule 113 (empty -> .)
    BREAK           reduce using rule 113 (empty -> .)
    LOCAL           reduce using rule 113 (empty -> .)
    FUNCTION        reduce using rule 113 (empty -> .)
    DO              reduce using rule 113 (empty -> .)
    WHILE           reduce using rule 113 (empty -> .)
    REPEAT          reduce using rule 113 (empty -> .)
    FOR             reduce using rule 113 (empty -> .)
    IF              reduce using rule 113 (empty -> .)
    (               reduce using rule 113 (empty -> .)
    IDENTIFIER      reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)
    END             reduce using rule 113 (empty -> .)
    UNTIL           reduce using rule 113 (empty -> .)
    ELSEIF          reduce using rule 113 (empty -> .)
    ELSE            reduce using rule 113 (empty -> .)

    optsemi                        shift and go to state 25
    empty                          shift and go to state 27

state 6

    (9) laststat -> RETURN . explist optsemi
    (10) laststat -> RETURN . optsemi
    (54) explist -> . exp
    (55) explist -> . explist , exp
    (7) optsemi -> . ;
    (8) optsemi -> . empty
    (44) exp -> . NIL
    (45) exp -> . FALSE
    (46) exp -> . TRUE
    (47) exp -> . NUMBER
    (48) exp -> . string
    (49) exp -> . TDOT
    (50) exp -> . function
    (51) exp -> . prefixexp
    (52) exp -> . tableconstructor
    (53) exp -> . op
    (113) empty -> .
    (84) string -> . STRING
    (59) function -> . FUNCTION funcbody
    (56) prefixexp -> . var
    (57) prefixexp -> . functioncall
    (58) prefixexp -> . ( exp )
    (72) tableconstructor -> . { fieldlist }
    (73) tableconstructor -> . { }
    (85) op -> . op_1
    (32) var -> . name
    (33) var -> . prefixexp [ exp ]
    (34) var -> . prefixexp . name
    (60) functioncall -> . prefixexp args
    (61) functioncall -> . prefixexp : name args
    (86) op_1 -> . op_1 OR op_2
    (87) op_1 -> . op_2
    (37) name -> . IDENTIFIER
    (88) op_2 -> . op_2 AND op_3
    (89) op_2 -> . op_3
    (90) op_3 -> . op_3 LT op_4
    (91) op_3 -> . op_3 LTE op_4
    (92) op_3 -> . op_3 GT op_4
    (93) op_3 -> . op_3 GTE op_4
    (94) op_3 -> . op_3 NE op_4
    (95) op_3 -> . op_3 EQUALS op_4
    (96) op_3 -> . op_4
    (97) op_4 -> . op_4 CONCAT op_5
    (98) op_4 -> . op_5
    (99) op_5 -> . op_5 PLUS op_6
    (100) op_5 -> . op_5 MINUS op_6
    (101) op_5 -> . op_6
    (102) op_6 -> . op_6 TIMES op_7
    (103) op_6 -> . op_6 DIVIDE op_7
    (104) op_6 -> . op_6 % op_7
    (105) op_6 -> . op_7
    (106) op_7 -> . NOT op_8
    (107) op_7 -> . HASH op_8
    (108) op_7 -> . MINUS op_8
    (109) op_7 -> . op_8
    (110) op_8 -> . op_8 CIRCUMFLEX op_9
    (111) op_8 -> . op_9
    (112) op_9 -> . exp

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ( resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
    ;               shift and go to state 26
    NIL             shift and go to state 31
    FALSE           shift and go to state 32
    TRUE            shift and go to state 33
    NUMBER          shift and go to state 34
    TDOT            shift and go to state 36
    LOCAL           reduce using rule 113 (empty -> .)
    DO              reduce using rule 113 (empty -> .)
    WHILE           reduce using rule 113 (empty -> .)
    REPEAT          reduce using rule 113 (empty -> .)
    FOR             reduce using rule 113 (empty -> .)
    IF              reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)
    END             reduce using rule 113 (empty -> .)
    UNTIL           reduce using rule 113 (empty -> .)
    ELSEIF          reduce using rule 113 (empty -> .)
    ELSE            reduce using rule 113 (empty -> .)
    STRING          shift and go to state 41
    FUNCTION        shift and go to state 42
    (               shift and go to state 21
    {               shift and go to state 45
    IDENTIFIER      shift and go to state 22
    NOT             shift and go to state 54
    HASH            shift and go to state 56
    MINUS           shift and go to state 52

  ! FUNCTION        [ reduce using rule 113 (empty -> .) ]
  ! (               [ reduce using rule 113 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 113 (empty -> .) ]

    explist                        shift and go to state 28
    optsemi                        shift and go to state 29
    exp                            shift and go to state 30
    empty                          shift and go to state 27
    string                         shift and go to state 35
    function                       shift and go to state 37
    prefixexp                      shift and go to state 38
    tableconstructor               shift and go to state 39
    op                             shift and go to state 40
    var                            shift and go to state 43
    functioncall                   shift and go to state 44
    op_1                           shift and go to state 46
    name                           shift and go to state 11
    op_2                           shift and go to state 47
    op_3                           shift and go to state 48
    op_4                           shift and go to state 49
    op_5                           shift and go to state 50
    op_6                           shift and go to state 51
    op_7                           shift and go to state 53
    op_8                           shift and go to state 55
    op_9                           shift and go to state 57

state 7

    (11) laststat -> BREAK . optsemi
    (7) optsemi -> . ;
    (8) optsemi -> . empty
    (113) empty -> .

    ;               shift and go to state 26
    LOCAL           reduce using rule 113 (empty -> .)
    FUNCTION        reduce using rule 113 (empty -> .)
    DO              reduce using rule 113 (empty -> .)
    WHILE           reduce using rule 113 (empty -> .)
    REPEAT          reduce using rule 113 (empty -> .)
    FOR             reduce using rule 113 (empty -> .)
    IF              reduce using rule 113 (empty -> .)
    (               reduce using rule 113 (empty -> .)
    IDENTIFIER      reduce using rule 113 (empty -> .)
    $end            reduce using rule 113 (empty -> .)
    END             reduce using rule 113 (empty -> .)
    UNTIL           reduce using rule 113 (empty -> .)
    ELSEIF          reduce using rule 113 (empty -> .)
    ELSE            reduce using rule 113 (empty -> .)

    optsemi                        shift and go to state 58
    empty                          shift and go to state 27

state 8

    (12) stat -> varlist . = explist
    (36) varlist -> varlist . , var

    =               shift and go to state 59
    ,               shift and go to state 60


state 9

    (13) stat -> LOCAL . namelist = explist
    (14) stat -> LOCAL . namelist
    (16) stat -> LOCAL . FUNCTION name funcbody
    (42) namelist -> . name
    (43) namelist -> . namelist , name
    (37) name -> . IDENTIFIER

    FUNCTION        shift and go to state 62
    IDENTIFIER      shift and go to state 22

    namelist                       shift and go to state 61
    name                           shift and go to state 63

state 10

    (15) stat -> FUNCTION . funcname funcbody
    (38) funcname -> . funcname2
    (39) funcname -> . funcname2 : name
    (40) funcname2 -> . name
    (41) funcname2 -> . funcname2 . name
    (37) name -> . IDENTIFIER

    IDENTIFIER      shift and go to state 22

    funcname                       shift and go to state 64
    funcname2                      shift and go to state 65
    name                           shift and go to state 66

state 11

    (32) var -> name .

    =               reduce using rule 32 (var -> name .)
    ,               reduce using rule 32 (var -> name .)
    :               reduce using rule 32 (var -> name .)
    [               reduce using rule 32 (var -> name .)
    .               reduce using rule 32 (var -> name .)
    (               reduce using rule 32 (var -> name .)
    {               reduce using rule 32 (var -> name .)
    STRING          reduce using rule 32 (var -> name .)
    ;               reduce using rule 32 (var -> name .)
    LOCAL           reduce using rule 32 (var -> name .)
    FUNCTION        reduce using rule 32 (var -> name .)
    DO              reduce using rule 32 (var -> name .)
    WHILE           reduce using rule 32 (var -> name .)
    REPEAT          reduce using rule 32 (var -> name .)
    FOR             reduce using rule 32 (var -> name .)
    IF              reduce using rule 32 (var -> name .)
    IDENTIFIER      reduce using rule 32 (var -> name .)
    $end            reduce using rule 32 (var -> name .)
    END             reduce using rule 32 (var -> name .)
    UNTIL           reduce using rule 32 (var -> name .)
    ELSEIF          reduce using rule 32 (var -> name .)
    ELSE            reduce using rule 32 (var -> name .)
    CIRCUMFLEX      reduce using rule 32 (var -> name .)
    TIMES           reduce using rule 32 (var -> name .)
    DIVIDE          reduce using rule 32 (var -> name .)
    %               reduce using rule 32 (var -> name .)
    PLUS            reduce using rule 32 (var -> name .)
    MINUS           reduce using rule 32 (var -> name .)
    CONCAT          reduce using rule 32 (var -> name .)
    LT              reduce using rule 32 (var -> name .)
    LTE             reduce using rule 32 (var -> name .)
    GT              reduce using rule 32 (var -> name .)
    GTE             reduce using rule 32 (var -> name .)
    NE              reduce using rule 32 (var -> name .)
    EQUALS          reduce using rule 32 (var -> name .)
    AND             reduce using rule 32 (var -> name .)
    OR              reduce using rule 32 (var -> name .)
    THEN            reduce using rule 32 (var -> name .)
    )               reduce using rule 32 (var -> name .)
    }               reduce using rule 32 (var -> name .)
    RETURN          reduce using rule 32 (var -> name .)
    BREAK           reduce using rule 32 (var -> name .)
    ]               reduce using rule 32 (var -> name .)


state 12

    (17) stat -> functioncall .
    (57) prefixexp -> functioncall .

  ! reduce/reduce conflict for ( resolved using rule 17 (stat -> functioncall .)
    ;               reduce using rule 17 (stat -> functioncall .)
    RETURN          reduce using rule 17 (stat -> functioncall .)
    BREAK           reduce using rule 17 (stat -> functioncall .)
    LOCAL           reduce using rule 17 (stat -> functioncall .)
    FUNCTION        reduce using rule 17 (stat -> functioncall .)
    DO              reduce using rule 17 (stat -> functioncall .)
    WHILE           reduce using rule 17 (stat -> functioncall .)
    REPEAT          reduce using rule 17 (stat -> functioncall .)
    FOR             reduce using rule 17 (stat -> functioncall .)
    IF              reduce using rule 17 (stat -> functioncall .)
    (               reduce using rule 17 (stat -> functioncall .)
    IDENTIFIER      reduce using rule 17 (stat -> functioncall .)
    $end            reduce using rule 17 (stat -> functioncall .)
    END             reduce using rule 17 (stat -> functioncall .)
    UNTIL           reduce using rule 17 (stat -> functioncall .)
    ELSEIF          reduce using rule 17 (stat -> functioncall .)
    ELSE            reduce using rule 17 (stat -> functioncall .)
    :               reduce using rule 57 (prefixexp -> functioncall .)
    [               reduce using rule 57 (prefixexp -> functioncall .)
    .               reduce using rule 57 (prefixexp -> functioncall .)
    {               reduce using rule 57 (prefixexp -> functioncall .)
    STRING          reduce using rule 57 (prefixexp -> functioncall .)

  ! (               [ reduce using rule 57 (prefixexp -> functioncall .) ]


state 13

    (18) stat -> DO . block END
    (1) block -> . chunk
    (2) chunk -> . chunk2 laststat
    (3) chunk -> . chunk2
    (4) chunk -> . laststat
    (5) chunk2 -> . stat optsemi
    (6) chunk2 -> . chunk stat optsemi
    (9) laststat -> . RETURN explist optsemi
    (10) laststat -> . RETURN optsemi
    (11) laststat -> . BREAK optsemi
    (12) stat -> . varlist = explist
    (13) stat -> . LOCAL namelist = explist
    (14) stat -> . LOCAL namelist
    (15) stat -> . FUNCTION funcname funcbody
    (16) stat -> . LOCAL FUNCTION name funcbody
    (17) stat -> . functioncall
    (18) stat -> . DO block END
    (19) stat -> . WHILE exp DO block END
    (20) stat -> . REPEAT block UNTIL exp
    (21) stat -> . if elseiflist else END
    (22) stat -> . FOR name = exp , exp DO block END
    (23) stat -> . FOR name = exp , exp , exp DO block END
    (24) stat -> . FOR namelist IN explist DO block END
    (35) varlist -> . var
    (36) varlist -> . varlist , var
    (60) functioncall -> . prefixexp args
    (61) functioncall -> . prefixexp : name args
    (25) if -> . IF exp THEN block
    (32) var -> . name
    (33) var -> . prefixexp [ exp ]
    (34) var -> . prefixexp . name
    (56) prefixexp -> . var
    (57) prefixexp -> . functioncall
    (58) prefixexp -> . ( exp )
    (37) name -> . IDENTIFIER

    RETURN          shift and go to state 6
    BREAK           shift and go to state 7
    LOCAL           shift and go to state 9
    FUNCTION        shift and go to state 10
    DO              shift and go to state 13
    WHILE           shift and go to state 14
    REPEAT          shift and go to state 15
    FOR             shift and go to state 17
    IF              shift and go to state 20
    (               shift and go to state 21
    IDENTIFIER      shift and go to state 22

    block                          shift and go to state 67
    chunk                          shift and go to state 2
    chunk2                         shift and go to state 3
    laststat                       shift and go to state 4
    stat                           shift and go to state 5
    varlist                        shift and go to state 8
    name                           shift and go to state 11
    functioncall                   shift and go to state 12
    if                             shift and go to state 16
    var                            shift and go to state 18
    prefixexp                      shift and go to state 19

state 14
